--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 
 .bottom-text {
   position: absolute;
-  bottom: 20px; /* Adjust the distance from the bottom */
+  bottom: 20px; 
   left: 50%;
   transform: translateX(-50%);
   color: white;
@@ -34,11 +34,11 @@ body {
 }
 
 .line {
-  font-size: 80px;
+  font-size: 60px;
   margin: 10px 0;
   line-height: 1;  
 }
 
 .designation {
-  font-size: 60px;  
+  font-size: 50px;  
 }
