--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,12 @@ body {
   line-height: 1; /* Adjust line height for better readability */
 }
 
+.line2 {
+  font-size: 70px;
+  margin: 30px 0;
+  line-height: 1; /* Adjust line height for better readability */
+}
+
 .name,
 .designation {
   display: block;
