--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
   position: absolute;
   left: 7%;
   transform: translateX(0%);
-  color: orange;
+  color: #414F12;
   text-align: left;
 }
 
