--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .background-image {
-  background-image: url('Zoom-Autonomous.png'); /* Replace 'path/to/your/image.jpg' with your file path */
+  background-image: url('Zoom-HCM1.png'); /* Replace 'path/to/your/image.jpg' with your file path */
   background-size: cover;
   background-position: center;
   position: fixed;
